parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    achari
    awal
    bdo
    break
    case
    class
    continue
    dafault
    delete
    enum
    et
    false
    include
    negatif
    new
    ou
    private
    protected
    public
    reel
    return
    scanf
    switch
    this
    true

Grammar

Rule 0     S' -> expression
Rule 1     expression -> if ouvrir_parenthese expression fermer_parenthese ouvrir_accolade expression fermer_accolade
Rule 2     expression -> expression_arithmetique operation_relationnel expression_arithmetique
Rule 3     expression -> chaine_de_caractere operation_relationnel expression_arithmetique
Rule 4     expression -> expression_arithmetique operation_relationnel chaine_de_caractere
Rule 5     expression -> chaine_de_caractere operation_relationnel chaine_de_caractere
Rule 6     expression -> expression egalite expression
Rule 7     expression -> chaine_de_caractere egalite expression
Rule 8     expression -> chaine_de_caractere egalite chaine_de_caractere
Rule 9     expression -> expression different expression
Rule 10    expression -> chaine_de_caractere different expression
Rule 11    expression -> chaine_de_caractere different chaine_de_caractere
Rule 12    expression -> term
Rule 13    term -> factor
Rule 14    factor -> entier
Rule 15    factor -> ouvrir_parenthese expression fermer_parenthese
Rule 16    expression -> expression addition expression
Rule 17    expression -> addition expression
Rule 18    expression -> chaine_de_caractere addition expression
Rule 19    expression -> expression addition chaine_de_caractere
Rule 20    expression -> chaine_de_caractere addition chaine_de_caractere
Rule 21    expression -> expression soustraction expression
Rule 22    expression -> soustraction expression
Rule 23    expression -> chaine_de_caractere soustraction expression
Rule 24    expression -> expression soustraction chaine_de_caractere
Rule 25    expression -> chaine_de_caractere soustraction chaine_de_caractere
Rule 26    expression -> printf expression
Rule 27    expression -> printf chaine_de_caractere
Rule 28    expression -> chaine_de_caractere affectation chaine_de_caractere
Rule 29    expression -> chaine_de_caractere affectation entier
Rule 30    expression -> identificateur affectation caractere
Rule 31    expression -> size_of ouvrir_parenthese chaine_de_caractere fermer_parenthese
Rule 32    operation_relationnel -> superieur
Rule 33    operation_relationnel -> inferieur
Rule 34    operation_relationnel -> superieur_egale
Rule 35    operation_relationnel -> inferieur_egale
Rule 36    expression -> expression multiplication expression
Rule 37    expression -> chaine_de_caractere multiplication expression
Rule 38    expression -> expression multiplication chaine_de_caractere
Rule 39    expression -> chaine_de_caractere multiplication chaine_de_caractere
Rule 40    expression -> expression division expression
Rule 41    expression -> chaine_de_caractere division expression
Rule 42    expression -> expression division chaine_de_caractere
Rule 43    expression -> chaine_de_caractere division chaine_de_caractere
Rule 44    expression_arithmetique -> term
Rule 45    expression_arithmetique -> expression
Rule 46    expression -> expression_arithmetique addition term
Rule 47    expression -> expression_arithmetique soustraction term
Rule 48    factor -> ouvrir_parenthese expression_arithmetique fermer_parenthese
Rule 49    factor -> inti
Rule 50    factor -> floati
Rule 51    factor -> identificateur
Rule 52    factor -> char
Rule 53    command -> basic_command
Rule 54    command -> iteration
Rule 55    expression -> if ouvrir_parenthese expression fermer_parenthese ouvrir_accolade expression fermer_accolade else ouvrir_accolade expression fermer_accolade
Rule 56    loop_while -> for ouvrir_parenthese entier fermer_parenthese ouvrir_accolade expression fermer_accolade
Rule 57    assignment -> identificateur affectation expression_arithmetique
Rule 58    basic_command -> affectation
Rule 59    basic_command -> block
Rule 60    statement -> loop_while
Rule 61    condLoop -> ouvrir_parenthese expression fermer_parenthese
Rule 62    comment -> hashtag expression
Rule 63    loop_while -> while ouvrir_parenthese condLoop fermer_parenthese ouvrir_accolade expression fermer_accolade
Rule 64    iteration -> do command while ouvrir_parenthese expression fermer_parenthese point_virgule
Rule 65    block -> ouvrir_accolade expression command fermer_accolade

Terminals, with rules where they appear

achari               : 
addition             : 16 17 18 19 20 46
affectation          : 28 29 30 57 58
awal                 : 
bdo                  : 
break                : 
caractere            : 30
case                 : 
chaine_de_caractere  : 3 4 5 5 7 8 8 10 11 11 18 19 20 20 23 24 25 25 27 28 28 29 31 37 38 39 39 41 42 43 43
char                 : 52
class                : 
continue             : 
dafault              : 
delete               : 
different            : 9 10 11
division             : 40 41 42 43
do                   : 64
egalite              : 6 7 8
else                 : 55
entier               : 14 29 56
enum                 : 
error                : 
et                   : 
false                : 
fermer_accolade      : 1 55 55 56 63 65
fermer_parenthese    : 1 15 31 48 55 56 61 63 64
floati               : 50
for                  : 56
hashtag              : 62
identificateur       : 30 51 57
if                   : 1 55
include              : 
inferieur            : 33
inferieur_egale      : 35
inti                 : 49
multiplication       : 36 37 38 39
negatif              : 
new                  : 
ou                   : 
ouvrir_accolade      : 1 55 55 56 63 65
ouvrir_parenthese    : 1 15 31 48 55 56 61 63 64
point_virgule        : 64
printf               : 26 27
private              : 
protected            : 
public               : 
reel                 : 
return               : 
scanf                : 
size_of              : 31
soustraction         : 21 22 23 24 25 47
superieur            : 32
superieur_egale      : 34
switch               : 
this                 : 
true                 : 
while                : 63 64

Nonterminals, with rules where they appear

assignment           : 
basic_command        : 53
block                : 59
command              : 64 65
comment              : 
condLoop             : 63
expression           : 1 1 6 6 7 9 9 10 15 16 16 17 18 19 21 21 22 23 24 26 36 36 37 38 40 40 41 42 45 55 55 55 56 61 62 63 64 65 0
expression_arithmetique : 2 2 3 4 46 47 48 57
factor               : 13
iteration            : 54
loop_while           : 60
operation_relationnel : 2 3 4 5
statement            : 
term                 : 12 44 46 47

Parsing method: LALR

state 0

    (0) S' -> . expression
    (1) expression -> . if ouvrir_parenthese expression fermer_parenthese ouvrir_accolade expression fermer_accolade
    (2) expression -> . expression_arithmetique operation_relationnel expression_arithmetique
    (3) expression -> . chaine_de_caractere operation_relationnel expression_arithmetique
    (4) expression -> . expression_arithmetique operation_relationnel chaine_de_caractere
    (5) expression -> . chaine_de_caractere operation_relationnel chaine_de_caractere
    (6) expression -> . expression egalite expression
    (7) expression -> . chaine_de_caractere egalite expression
    (8) expression -> . chaine_de_caractere egalite chaine_de_caractere
    (9) expression -> . expression different expression
    (10) expression -> . chaine_de_caractere different expression
    (11) expression -> . chaine_de_caractere different chaine_de_caractere
    (12) expression -> . term
    (16) expression -> . expression addition expression
    (17) expression -> . addition expression
    (18) expression -> . chaine_de_caractere addition expression
    (19) expression -> . expression addition chaine_de_caractere
    (20) expression -> . chaine_de_caractere addition chaine_de_caractere
    (21) expression -> . expression soustraction expression
    (22) expression -> . soustraction expression
    (23) expression -> . chaine_de_caractere soustraction expression
    (24) expression -> . expression soustraction chaine_de_caractere
    (25) expression -> . chaine_de_caractere soustraction chaine_de_caractere
    (26) expression -> . printf expression
    (27) expression -> . printf chaine_de_caractere
    (28) expression -> . chaine_de_caractere affectation chaine_de_caractere
    (29) expression -> . chaine_de_caractere affectation entier
    (30) expression -> . identificateur affectation caractere
    (31) expression -> . size_of ouvrir_parenthese chaine_de_caractere fermer_parenthese
    (36) expression -> . expression multiplication expression
    (37) expression -> . chaine_de_caractere multiplication expression
    (38) expression -> . expression multiplication chaine_de_caractere
    (39) expression -> . chaine_de_caractere multiplication chaine_de_caractere
    (40) expression -> . expression division expression
    (41) expression -> . chaine_de_caractere division expression
    (42) expression -> . expression division chaine_de_caractere
    (43) expression -> . chaine_de_caractere division chaine_de_caractere
    (46) expression -> . expression_arithmetique addition term
    (47) expression -> . expression_arithmetique soustraction term
    (55) expression -> . if ouvrir_parenthese expression fermer_parenthese ouvrir_accolade expression fermer_accolade else ouvrir_accolade expression fermer_accolade
    (44) expression_arithmetique -> . term
    (45) expression_arithmetique -> . expression
    (13) term -> . factor
    (14) factor -> . entier
    (15) factor -> . ouvrir_parenthese expression fermer_parenthese
    (48) factor -> . ouvrir_parenthese expression_arithmetique fermer_parenthese
    (49) factor -> . inti
    (50) factor -> . floati
    (51) factor -> . identificateur
    (52) factor -> . char

    if              shift and go to state 2
    chaine_de_caractere shift and go to state 5
    addition        shift and go to state 7
    soustraction    shift and go to state 8
    printf          shift and go to state 9
    identificateur  shift and go to state 11
    size_of         shift and go to state 12
    entier          shift and go to state 10
    ouvrir_parenthese shift and go to state 3
    inti            shift and go to state 14
    floati          shift and go to state 15
    char            shift and go to state 16

    expression                     shift and go to state 1
    expression_arithmetique        shift and go to state 4
    term                           shift and go to state 6
    factor                         shift and go to state 13

state 1

    (0) S' -> expression .
    (6) expression -> expression . egalite expression
    (9) expression -> expression . different expression
    (16) expression -> expression . addition expression
    (19) expression -> expression . addition chaine_de_caractere
    (21) expression -> expression . soustraction expression
    (24) expression -> expression . soustraction chaine_de_caractere
    (36) expression -> expression . multiplication expression
    (38) expression -> expression . multiplication chaine_de_caractere
    (40) expression -> expression . division expression
    (42) expression -> expression . division chaine_de_caractere
    (45) expression_arithmetique -> expression .

  ! shift/reduce conflict for addition resolved as shift
  ! shift/reduce conflict for soustraction resolved as shift
    egalite         shift and go to state 17
    different       shift and go to state 18
    addition        shift and go to state 19
    soustraction    shift and go to state 20
    multiplication  shift and go to state 21
    division        shift and go to state 22
    superieur       reduce using rule 45 (expression_arithmetique -> expression .)
    inferieur       reduce using rule 45 (expression_arithmetique -> expression .)
    superieur_egale reduce using rule 45 (expression_arithmetique -> expression .)
    inferieur_egale reduce using rule 45 (expression_arithmetique -> expression .)

  ! addition        [ reduce using rule 45 (expression_arithmetique -> expression .) ]
  ! soustraction    [ reduce using rule 45 (expression_arithmetique -> expression .) ]


state 2

    (1) expression -> if . ouvrir_parenthese expression fermer_parenthese ouvrir_accolade expression fermer_accolade
    (55) expression -> if . ouvrir_parenthese expression fermer_parenthese ouvrir_accolade expression fermer_accolade else ouvrir_accolade expression fermer_accolade

    ouvrir_parenthese shift and go to state 23


state 3

    (15) factor -> ouvrir_parenthese . expression fermer_parenthese
    (48) factor -> ouvrir_parenthese . expression_arithmetique fermer_parenthese
    (1) expression -> . if ouvrir_parenthese expression fermer_parenthese ouvrir_accolade expression fermer_accolade
    (2) expression -> . expression_arithmetique operation_relationnel expression_arithmetique
    (3) expression -> . chaine_de_caractere operation_relationnel expression_arithmetique
    (4) expression -> . expression_arithmetique operation_relationnel chaine_de_caractere
    (5) expression -> . chaine_de_caractere operation_relationnel chaine_de_caractere
    (6) expression -> . expression egalite expression
    (7) expression -> . chaine_de_caractere egalite expression
    (8) expression -> . chaine_de_caractere egalite chaine_de_caractere
    (9) expression -> . expression different expression
    (10) expression -> . chaine_de_caractere different expression
    (11) expression -> . chaine_de_caractere different chaine_de_caractere
    (12) expression -> . term
    (16) expression -> . expression addition expression
    (17) expression -> . addition expression
    (18) expression -> . chaine_de_caractere addition expression
    (19) expression -> . expression addition chaine_de_caractere
    (20) expression -> . chaine_de_caractere addition chaine_de_caractere
    (21) expression -> . expression soustraction expression
    (22) expression -> . soustraction expression
    (23) expression -> . chaine_de_caractere soustraction expression
    (24) expression -> . expression soustraction chaine_de_caractere
    (25) expression -> . chaine_de_caractere soustraction chaine_de_caractere
    (26) expression -> . printf expression
    (27) expression -> . printf chaine_de_caractere
    (28) expression -> . chaine_de_caractere affectation chaine_de_caractere
    (29) expression -> . chaine_de_caractere affectation entier
    (30) expression -> . identificateur affectation caractere
    (31) expression -> . size_of ouvrir_parenthese chaine_de_caractere fermer_parenthese
    (36) expression -> . expression multiplication expression
    (37) expression -> . chaine_de_caractere multiplication expression
    (38) expression -> . expression multiplication chaine_de_caractere
    (39) expression -> . chaine_de_caractere multiplication chaine_de_caractere
    (40) expression -> . expression division expression
    (41) expression -> . chaine_de_caractere division expression
    (42) expression -> . expression division chaine_de_caractere
    (43) expression -> . chaine_de_caractere division chaine_de_caractere
    (46) expression -> . expression_arithmetique addition term
    (47) expression -> . expression_arithmetique soustraction term
    (55) expression -> . if ouvrir_parenthese expression fermer_parenthese ouvrir_accolade expression fermer_accolade else ouvrir_accolade expression fermer_accolade
    (44) expression_arithmetique -> . term
    (45) expression_arithmetique -> . expression
    (13) term -> . factor
    (14) factor -> . entier
    (15) factor -> . ouvrir_parenthese expression fermer_parenthese
    (48) factor -> . ouvrir_parenthese expression_arithmetique fermer_parenthese
    (49) factor -> . inti
    (50) factor -> . floati
    (51) factor -> . identificateur
    (52) factor -> . char

    if              shift and go to state 2
    chaine_de_caractere shift and go to state 5
    addition        shift and go to state 7
    soustraction    shift and go to state 8
    printf          shift and go to state 9
    identificateur  shift and go to state 11
    size_of         shift and go to state 12
    entier          shift and go to state 10
    ouvrir_parenthese shift and go to state 3
    inti            shift and go to state 14
    floati          shift and go to state 15
    char            shift and go to state 16

    expression                     shift and go to state 24
    expression_arithmetique        shift and go to state 25
    term                           shift and go to state 6
    factor                         shift and go to state 13

state 4

    (2) expression -> expression_arithmetique . operation_relationnel expression_arithmetique
    (4) expression -> expression_arithmetique . operation_relationnel chaine_de_caractere
    (46) expression -> expression_arithmetique . addition term
    (47) expression -> expression_arithmetique . soustraction term
    (32) operation_relationnel -> . superieur
    (33) operation_relationnel -> . inferieur
    (34) operation_relationnel -> . superieur_egale
    (35) operation_relationnel -> . inferieur_egale

    addition        shift and go to state 27
    soustraction    shift and go to state 28
    superieur       shift and go to state 29
    inferieur       shift and go to state 30
    superieur_egale shift and go to state 31
    inferieur_egale shift and go to state 32

    operation_relationnel          shift and go to state 26

state 5

    (3) expression -> chaine_de_caractere . operation_relationnel expression_arithmetique
    (5) expression -> chaine_de_caractere . operation_relationnel chaine_de_caractere
    (7) expression -> chaine_de_caractere . egalite expression
    (8) expression -> chaine_de_caractere . egalite chaine_de_caractere
    (10) expression -> chaine_de_caractere . different expression
    (11) expression -> chaine_de_caractere . different chaine_de_caractere
    (18) expression -> chaine_de_caractere . addition expression
    (20) expression -> chaine_de_caractere . addition chaine_de_caractere
    (23) expression -> chaine_de_caractere . soustraction expression
    (25) expression -> chaine_de_caractere . soustraction chaine_de_caractere
    (28) expression -> chaine_de_caractere . affectation chaine_de_caractere
    (29) expression -> chaine_de_caractere . affectation entier
    (37) expression -> chaine_de_caractere . multiplication expression
    (39) expression -> chaine_de_caractere . multiplication chaine_de_caractere
    (41) expression -> chaine_de_caractere . division expression
    (43) expression -> chaine_de_caractere . division chaine_de_caractere
    (32) operation_relationnel -> . superieur
    (33) operation_relationnel -> . inferieur
    (34) operation_relationnel -> . superieur_egale
    (35) operation_relationnel -> . inferieur_egale

    egalite         shift and go to state 34
    different       shift and go to state 35
    addition        shift and go to state 36
    soustraction    shift and go to state 37
    affectation     shift and go to state 38
    multiplication  shift and go to state 39
    division        shift and go to state 40
    superieur       shift and go to state 29
    inferieur       shift and go to state 30
    superieur_egale shift and go to state 31
    inferieur_egale shift and go to state 32

    operation_relationnel          shift and go to state 33

state 6

    (12) expression -> term .
    (44) expression_arithmetique -> term .

  ! reduce/reduce conflict for addition resolved using rule 12 (expression -> term .)
  ! reduce/reduce conflict for soustraction resolved using rule 12 (expression -> term .)
  ! reduce/reduce conflict for superieur resolved using rule 12 (expression -> term .)
  ! reduce/reduce conflict for inferieur resolved using rule 12 (expression -> term .)
  ! reduce/reduce conflict for superieur_egale resolved using rule 12 (expression -> term .)
  ! reduce/reduce conflict for inferieur_egale resolved using rule 12 (expression -> term .)
  ! reduce/reduce conflict for fermer_parenthese resolved using rule 12 (expression -> term .)
    egalite         reduce using rule 12 (expression -> term .)
    different       reduce using rule 12 (expression -> term .)
    addition        reduce using rule 12 (expression -> term .)
    soustraction    reduce using rule 12 (expression -> term .)
    multiplication  reduce using rule 12 (expression -> term .)
    division        reduce using rule 12 (expression -> term .)
    $end            reduce using rule 12 (expression -> term .)
    superieur       reduce using rule 12 (expression -> term .)
    inferieur       reduce using rule 12 (expression -> term .)
    superieur_egale reduce using rule 12 (expression -> term .)
    inferieur_egale reduce using rule 12 (expression -> term .)
    fermer_parenthese reduce using rule 12 (expression -> term .)
    fermer_accolade reduce using rule 12 (expression -> term .)

  ! addition        [ reduce using rule 44 (expression_arithmetique -> term .) ]
  ! soustraction    [ reduce using rule 44 (expression_arithmetique -> term .) ]
  ! superieur       [ reduce using rule 44 (expression_arithmetique -> term .) ]
  ! inferieur       [ reduce using rule 44 (expression_arithmetique -> term .) ]
  ! superieur_egale [ reduce using rule 44 (expression_arithmetique -> term .) ]
  ! inferieur_egale [ reduce using rule 44 (expression_arithmetique -> term .) ]
  ! fermer_parenthese [ reduce using rule 44 (expression_arithmetique -> term .) ]


state 7

    (17) expression -> addition . expression
    (1) expression -> . if ouvrir_parenthese expression fermer_parenthese ouvrir_accolade expression fermer_accolade
    (2) expression -> . expression_arithmetique operation_relationnel expression_arithmetique
    (3) expression -> . chaine_de_caractere operation_relationnel expression_arithmetique
    (4) expression -> . expression_arithmetique operation_relationnel chaine_de_caractere
    (5) expression -> . chaine_de_caractere operation_relationnel chaine_de_caractere
    (6) expression -> . expression egalite expression
    (7) expression -> . chaine_de_caractere egalite expression
    (8) expression -> . chaine_de_caractere egalite chaine_de_caractere
    (9) expression -> . expression different expression
    (10) expression -> . chaine_de_caractere different expression
    (11) expression -> . chaine_de_caractere different chaine_de_caractere
    (12) expression -> . term
    (16) expression -> . expression addition expression
    (17) expression -> . addition expression
    (18) expression -> . chaine_de_caractere addition expression
    (19) expression -> . expression addition chaine_de_caractere
    (20) expression -> . chaine_de_caractere addition chaine_de_caractere
    (21) expression -> . expression soustraction expression
    (22) expression -> . soustraction expression
    (23) expression -> . chaine_de_caractere soustraction expression
    (24) expression -> . expression soustraction chaine_de_caractere
    (25) expression -> . chaine_de_caractere soustraction chaine_de_caractere
    (26) expression -> . printf expression
    (27) expression -> . printf chaine_de_caractere
    (28) expression -> . chaine_de_caractere affectation chaine_de_caractere
    (29) expression -> . chaine_de_caractere affectation entier
    (30) expression -> . identificateur affectation caractere
    (31) expression -> . size_of ouvrir_parenthese chaine_de_caractere fermer_parenthese
    (36) expression -> . expression multiplication expression
    (37) expression -> . chaine_de_caractere multiplication expression
    (38) expression -> . expression multiplication chaine_de_caractere
    (39) expression -> . chaine_de_caractere multiplication chaine_de_caractere
    (40) expression -> . expression division expression
    (41) expression -> . chaine_de_caractere division expression
    (42) expression -> . expression division chaine_de_caractere
    (43) expression -> . chaine_de_caractere division chaine_de_caractere
    (46) expression -> . expression_arithmetique addition term
    (47) expression -> . expression_arithmetique soustraction term
    (55) expression -> . if ouvrir_parenthese expression fermer_parenthese ouvrir_accolade expression fermer_accolade else ouvrir_accolade expression fermer_accolade
    (44) expression_arithmetique -> . term
    (45) expression_arithmetique -> . expression
    (13) term -> . factor
    (14) factor -> . entier
    (15) factor -> . ouvrir_parenthese expression fermer_parenthese
    (48) factor -> . ouvrir_parenthese expression_arithmetique fermer_parenthese
    (49) factor -> . inti
    (50) factor -> . floati
    (51) factor -> . identificateur
    (52) factor -> . char

    if              shift and go to state 2
    chaine_de_caractere shift and go to state 5
    addition        shift and go to state 7
    soustraction    shift and go to state 8
    printf          shift and go to state 9
    identificateur  shift and go to state 11
    size_of         shift and go to state 12
    entier          shift and go to state 10
    ouvrir_parenthese shift and go to state 3
    inti            shift and go to state 14
    floati          shift and go to state 15
    char            shift and go to state 16

    expression                     shift and go to state 41
    expression_arithmetique        shift and go to state 4
    term                           shift and go to state 6
    factor                         shift and go to state 13

state 8
